# image_resizer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  main.rs
