[package]
name = "image_resizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "rt"] }
image = "0.25.6"
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
colored = "3.0.0"

[profile.release]
lto = true
codegen-units = 1
